Bug 1313557 - remove the assertion from InternalInit() to avoid data race. r=jya

MozReview-Commit-ID: B9GCHOjMqVf